src/test/ui/hr-subtype/hr-subtype.bound_a_vs_free_x.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | |                              fn(&'x u32)) }
   | |___________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<for<'a> fn(&'a u32)>`
              found type `std::option::Option<fn(&'x u32)>`
   = note: lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:23), 'a) })...
note: ...does not necessarily outlive the lifetime 'x as defined on the function body at 48:22
  --> $DIR/hr-subtype.rs:48:22
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                        ^^
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | |                              fn(&'x u32)) }
   | |___________________________________________- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
